--- a/templates/index.html
+++ b/templates/index.html
@@ -6,27 +6,18 @@
         {% endif %}
         </h1>
         {% if not username %}
-            <p>to view a users timeline select user and submit <b>username</b>
-                <form method="post" action="/tweets">
-                    <select name = users >
-                        <option value ='Kyle'>Kyle</option>
-                        <option value ='Thomas'>Thomas</option>
-                        <option value ='Franc'>Franc</option>
-                        <option value ='Richard'>Richard</option>
-                    </select>
-                    <input type="submit" value="Submit">
-                </form>
-                </p>
-                {% for tweet in tweetlist %}
-                    <p> {{tweet}} </p>
-                {% endfor %}
+            <p>to view a users timeline go to /?username=<b>username</b></p>
             <p><a href="/?username=Kyle">example</a></p>
             <p>Posts can be found <a href="/posts">here</a></p>
             <p>Users and there follows can be found <a href="/users">here</a></p>
         {% else %}
-            <p>Your tweets:</p>
-            <ul>
-                <li>first tweet <a href="/example"> tweets</a> </li>
+            <p actio>Your tweets:</p>
+            <ul >
+                
+                {% for tweet in tweetlist %}
+                    <li><p> {{tweet}} </p></li>
+                {% endfor %}
+                
                 
             </ul>
         {% endif %}
